Begin fixing color contrast if tabs and heading elements

--- a/client/src/app/styles.css
+++ b/client/src/app/styles.css
@@ -47,7 +47,7 @@ label {
 }
 
 a {
-  color: rgb(0, 169, 204);
+  color: rgb(0, 128, 164);
   text-decoration: none;
 }
 
@@ -99,10 +99,10 @@ fieldset {
   border-radius: 3px;
   font-size: 0.625rem;
   color: white;
-  background-color: rgb(0, 169, 204);
+  background-color: rgb(0, 128, 164);
 }
 .avert-button:hover {
-  background-color: rgb(0, 190, 230);
+  background-color: rgb(0, 164, 200);
 }
 .avert-button-disabled,
 .avert-button-disabled:hover {
@@ -129,7 +129,7 @@ fieldset {
 
 .avert-table th {
   color: white;
-  background-color: rgb(0, 169, 204);
+  background-color: rgb(0, 128, 164);
 }
 
 .avert-table th,
